Fix dark mode in JavaScript class reference (#5002)

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -285,7 +285,7 @@ hr,
 
 /* JavaScript documentation directives */
 .rst-content dl:not(.docutils) dt {
-    background-color: var(--admonition-note-background-color);
+    background-color: var(--admonition-note-background-color) !important;
     border-color: var(--admonition-note-title-background-color);
     color: var(--admonition-note-color);
 }
